Minor padding bottom added to the section_title to avoid cut off of fancy header.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section:first-of-type {
 }
 .section_title {
     min-height: 0;
-    padding: 5vw 4vw 15px;
+    padding: 5vw 4vw 20px;
 }
 .section_title h1 {
     text-align: center;
